# FunnyBot

./: README.md  docker-compose.yml
.github/workflows/: docker.yml
app/: Pipfile  main.py
app/data/: jokes.json
funnybot/: .dockerignore  Dockerfile  Pipfile  go.mod  main.go  main.py  populate_db.py  supervisord.conf
funnybot/alembic/: env.py
funnybot/alembic/versions/: e3093105071d_initial_setup.py
funnybot/data/: austin_powers_quotes.json  star_wars_quotes.json
funnybot/db/: __init__.py  models.py  operations.py
funnybot/handlers/: message.go  ready.go
funnybot/models/: db.go
funnybot/utils/: loaders.go
funnybot_go/: go.sum  main.go
funnybot_go/data/: help.txt  insults.json  star_wars_quotes.json
funnybot_go/models/: joke.go
funnybot_py/: Dockerfile  main.py  populate_db.py  settings.py
funnybot_py/data/: jokes.json
funnybot_py/db/: __init__.py  models.py
funnybot_rs/: Cargo.toml  Dockerfile
funnybot_rs/data/: data.csv
funnybot_rs/migrations/: 20240906000000_init.sql
funnybot_rs/src/: main.rs
