[package]
name = "funnybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = "0.12.2"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.3"
